fix: fix homepage

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,18 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Inter:wght@100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Overpass:ital,wght@0,100..900;1,100..900&display=swap');
-
 html, body {
   padding: 0;
   margin: 0;
   overflow-x: hidden;
-  font-family: 'Libre Baskerville', serif !important;
+  font-family: 'Roboto', serif !important;
 }
 
 h1, h2, h3, h4, h5, h6, span, p {
   margin: 0;
   padding: 0;
-  font-family: 'Libre Baskerville', serif !important;
+  font-family: 'Roboto', serif !important;
 }
 
 button{
-  font-family: 'Libre Baskerville', serif !important;
+  font-family: 'Roboto', serif !important;
 }
