--- a/src/styles/ui/WebAppUILayout.css
+++ b/src/styles/ui/WebAppUILayout.css
@@ -5,7 +5,7 @@
 
 /* header */
 .header {
-    background-color: black;
+    background-color: white;
     height: 10vh;
     width: 100vw;
     display: flex;
@@ -18,25 +18,25 @@
 
 .header img {
     height: 20vh;
-    flex: 1;
+    flex: 0.5;
     margin-left: 2vw;
     /*background-color: purple;*/
 }
 
 .header-content {
-    flex: 2;
+    flex: 5;
     height: 100%;
-    padding: 0 17vw;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-end;
     align-items: center;
+    gap: 1vw;
     /*background-color: purple;*/
 }
 
 .header-buttons {
     /*background-color: darkgreen;*/
     height: 100%;
-    flex: 3;
+    flex: 1;
     margin-right: 2vw;
     display: flex;
     flex-direction: row;
@@ -45,29 +45,8 @@
 }
 
 .btn-link {
-    color: white !important;
-    position: relative;
+    color: black !important;
     z-index: 1;
-}
-
-.btn-link::after{
-    content: "";
-    display: inline-block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    color: white !important;
-    background-color: transparent;
-    background-image: linear-gradient(180deg,rgba(0, 0, 0, 1) 60%, rgba(58, 58, 58, 1) 75%, rgba(130, 130, 130, 1) 85%, rgba(207, 207, 207, 1) 95%, rgba(255, 255, 255, 1) 100%);
-    opacity: 0;
-    transition: opacity 0.5s;
-    z-index: -1;
-}
-
-.btn-link:hover::after {
-    opacity: 1;
 }
 
 /* body */
