--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,16 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Overpass:ital,wght@0,100..900;1,100..900&display=swap');
+
 html, body {
-  padding: 0;
-  margin: 0;
+  padding: 0 !important;
+  margin: 0 !important;
   overflow-x: hidden;
-  font-family: 'Roboto', serif !important;
+  font-family: 'Noto Serif', serif !important;
 }
 
 h1, h2, h3, h4, h5, h6, span, p {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', serif !important;
+  font-family: 'Noto Serif', serif !important;
 }
 
 button{
-  font-family: 'Roboto', serif !important;
+  font-family: 'Noto Serif', serif !important;
 }
