--- a/src/styles/ui/WebAppUILayout.css
+++ b/src/styles/ui/WebAppUILayout.css
@@ -28,7 +28,7 @@
     flex: 5;
     height: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
     gap: 1vw;
     /*background-color: purple;*/
@@ -43,6 +43,15 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
+}
+
+
+.header-buttons button {
+    text-transform: lowercase !important;
+}
+
+.header-buttons button svg {
+    font-size: 40px !important;
 }
 
 .btn-link {
